--- a/ejer17/ejer17.html
+++ b/ejer17/ejer17.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="ejer17.css">
 </head>
 <body>
-    <div class="cont">CONTENEDOR...
+    <div class="cont"><h1>CONTENEDOR...</h1>
         <div class="cont2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque temporibus dolor esse itaque quis deserunt maiores, fuga sint. Ducimus est ipsum aliquam non perspiciatis inventore illum consequatur? Doloremque, doloribus voluptatibus!</div>
     </div>
 </body>
